# ISUCON-2020-suburi

./: .dockerignore  .gitignore  Dockerfile_app  Dockerfile_db  README.md  docker-compose.yml
admin/config/: bashrc
docker/: init_db.sh  start_app.sh
ishocon2/: Cargo.toml
mysql/: my.cnf
nginx/: nginx.conf
scripts/: analyze  bench  deploy  mysql-analyze  nginx-analyze
systemd/: go.service  rust.service
webapp/rust/: .env  Cargo.toml  honban-web-start  test.sh  web-start
webapp/rust/src/: main.rs
webapp/rust/templates/: base.tera.html  candidate.tera.html  political_parties.tera.html  vote.tera.html
